--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"install": "^0.13.0",
+		"joi": "^17.7.0",
 		"mongoose": "^6.9.0",
 		"morgan": "^1.10.0",
 		"npm": "^9.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.18",
+		"joi-to-typescript": "^4.0.7",
 		"nodemon": "^2.0.20"
 	}
 }
