--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/express": "^4.17.16",
-		"@types/morgan": "^1.9.4",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"install": "^0.13.0",
 		"joi": "^17.7.0",
 		"mongoose": "^6.9.0",
-		"morgan": "^1.10.0",
-		"npm": "^9.4.0"
+		"morgan": "^1.10.0"		
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.16",
+		"@types/morgan": "^1.9.4",
 		"@types/node": "^18.11.18",
 		"joi-to-typescript": "^4.0.7",
 		"nodemon": "^2.0.20"
