--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start:dev": "nodemon dist/server.js"
+		"dev": "nodemon dist/server.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,7 +16,8 @@
 		"install": "^0.13.0",
 		"joi": "^17.7.0",
 		"mongoose": "^6.9.0",
-		"morgan": "^1.10.0"		
+		"morgan": "^1.10.0",
+		"mysql2": "^3.1.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.16",
