--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/morgan": "^1.9.4",
 		"@types/node": "^18.11.18",
 		"joi-to-typescript": "^4.0.7",
-		"nodemon": "^2.0.20"
+		"nodemon": "^2.0.20",
+		"typescript": "^4.9.5"
 	}
 }
