--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"install": "^0.13.0",
 		"joi": "^17.7.0",
 		"morgan": "^1.10.0",
-		"mysql2": "^3.1.2"
+		"mysql2": "^3.1.2",
+		"reflect-metadata": "^0.1.13"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.16",
